-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
- blocks
-
JDK-8371456 [lworld] ResolvedConstants.java fails since jdk-26+22
-
- Resolved
-
-
JDK-8372606 [lworld] runtime/cds/SharedStringsRunAuto.java fails with --enable-preview
-
- Resolved
-
-
JDK-8372607 [lworld] runtime/cds/SharedStringsDedup.java fails with --enable-preview
-
- Resolved
-
-
JDK-8372743 [lworld] jdk/internal/misc/CDS/ArchivedEnumTest.java fails with --enable-preview
-
- Resolved
-
-
JDK-8372745 [lworld] Fatal error in native method when running java/foreign/sharedclosejvmti/TestSharedCloseJvmti.java with --enable-preview
-
- Resolved
-
-
JDK-8372601 [lworld] runtime/cds/appcds/aotCode/AOTCodeCompressedOopsTest.java fails with --enable-preview
-
- Closed
-
-
JDK-8372602 [lworld] runtime/cds/appcds/aotCode/AOTCodeFlags.java fails with --enable-preview
-
- Closed
-
-
JDK-8372954 [lworld] Remove old implementation of the substitutability test method
-
- Resolved
-
- causes
-
JDK-8372744 [lworld] Several tests fail with "zip file closed" with --enable-preview
-
- Open
-
-
JDK-8372590 [lworld] runtime/modules/PatchModule/PatchModuleClassList.java fails with --enable-preview
-
- Closed
-
-
JDK-8373622 [lworld] Enabling jimage changes break tests with inMemoryJavaCompiler
-
- Resolved
-
- duplicates
-
JDK-8372590 [lworld] runtime/modules/PatchModule/PatchModuleClassList.java fails with --enable-preview
-
- Closed
-
- is blocked by
-
JDK-8352750 [lworld] Use jimage for preview enabled value classes
-
- In Progress
-
- relates to
-
JDK-8372686 [lworld] runtime/cds/serviceability/ReplaceCriticalClasses.java fails with --enable-preview
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/9eead93b
-
Review(lworld)
openjdk/valhalla/1757