8370904: [lworld] Enable CDS heap dumping

Reviewed-by: coleenp, fparain